[tool.poetry]
name = "north_admin"
version = "0.1.4"
description = "Easy-to-setup PWA Admin Panel solution based on FastAPI, async SQLAlchemy and pre-render Swelte UI"
authors = ["Anton Nikolskiy <a.nikolskiy@tyver.io>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.MD"

[tool.poetry.dependencies]
python = ">=3.11"
sqlalchemy = "^2.0.23"
fastapi = "^0.104.1"
ruff = "^0.1.5"
random-unicode-emoji = "^2.8"
greenlet = "^3.0.1"
pyjwt = "^2.8.0"
python-multipart = "^0.0.6"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
asyncpg = "^0.29.0"
psycopg = "^3.1.13"
uvicorn = "^0.24.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]

line-length = 120

[tool.ruff.isort]
known-third-party = ["north_admin", "fastapi", "pydantic", "starlette", "sqlalchemy", "asyncpg", "psycopg"]

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

